[gd_scene load_steps=4 format=3 uid="uid://c2a4tv2bm4n3o"]

[ext_resource type="Texture2D" uid="uid://1mko3tq2em7s" path="res://sprites/megaman_weapon.png" id="1_71dyf"]
[ext_resource type="Script" path="res://assets/megaman/weapons/megaman_bullet.gd" id="1_r50mf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_eqeb8"]
radius = 3.16228

[node name="MegamanBullet" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_r50mf")

[node name="MegamanBulletSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_71dyf")
offset = Vector2(0.05, 0)
region_enabled = true
region_rect = Rect2(246, 11, 8, 6)

[node name="MegamanBulletCollider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_eqeb8")

[node name="DisappearTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DisappearTimer" to="." method="_on_disappear_timer_timeout"]
